--- a/FilmCatalog/FilmCatalog/FilmCatalog.csproj
+++ b/FilmCatalog/FilmCatalog/FilmCatalog.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\Fonts\" />
+    <None Remove="Resources\Images\FilmMainPicture.png" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommonServiceLocator" Version="2.0.6" />
+    <PackageReference Include="Dragablz" Version="0.0.3.203" />
+    <PackageReference Include="MaterialDesignExtensions" Version="2.0.1" />
     <PackageReference Include="MaterialDesignThemes" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.18">
@@ -20,6 +22,10 @@
     </PackageReference>
     <PackageReference Include="MvvmLight" Version="5.4.1.1" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\FilmMainPicture.png" />
   </ItemGroup>
 
 </Project>
