--- a/FilmCatalog/FilmCatalog/FilmCatalog.csproj
+++ b/FilmCatalog/FilmCatalog/FilmCatalog.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="CommonServiceLocator" Version="2.0.6" />
     <PackageReference Include="Dragablz" Version="0.0.3.203" />
+    <PackageReference Include="EntityFramework" Version="5.0.0" />
     <PackageReference Include="MaterialDesignExtensions" Version="2.0.1" />
     <PackageReference Include="MaterialDesignThemes" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.18" />
